Use UUID and faker for the mock server to make it as real as possible
