# crates/k8s-operator/src/controllers/mod.rs
@@ -1,2 +1,1 @@
 pub mod cats;
-pub mod dogs;
